--- a/templates/ircInput.hbs
+++ b/templates/ircInput.hbs
@@ -1,6 +1,6 @@
 <div class='input'>
     <div class='tt-ahead input-group'>
-        <span class='input-group-addon nickname'><span class='status {{status}}'></span>{{nick}}</span>
+        <span class='input-group-addon user'><span class='status {{status}}'></span><span class="nickname">{{nick}}</span></span>
         {{!autocompleter}}
         <input class='tt-hint' type='text' autocomplete='off' spellcheck='off' disabled>
         <input class='tt-query input-field form-control' type='text' autocomplete='off' spellcheck='off'>
