--- a/templates/authpage.hbs
+++ b/templates/authpage.hbs
@@ -1,25 +1,27 @@
 <div class="container center">
     <form id="login">
         <h2>Connect to {{network}} IRC</h2>
-        <div class="nick right">
-            <label class="control-label" for="nickname">Nickname:
-                <input type="text" name="basic" id="nickname" value="{{nickname}}" placeholder="Nickname" />
-            </label>
-        </div>
-        <div class="username right {{#unless full}}hidden{{/unless}}">
-            <label class="control-label" for="username">{{network}} username:
-                <input type="text" name="full" id="username" value="{{username}}" placeholder="{{network}} username">
-            </label>
-        </div>
-        <div class="password right {{#unless full}}hidden{{/unless}}">
-            <label class="control-label" for="password">Password:
-                <input type="password" name="full" id="password" value="{{password}}">
-            </label>
-        </div>
-        <div class="authenticate">
-            <label for="authenticate">Authenticate (optional)<input type="checkbox" id="authenticate" {{check full}}></label for="authenticate">
-        </div>
-        <div><input type="submit" value="Connect" class="btn btn-primary btn-smaller" /></div>
+        <!-- <div class="controls"> -->
+            <div class="control-group right">
+                <label class="control-label" for="nickname">Nickname:
+                    <input type="text" class="form-control" data-validate="nick" name="basic" id="nickname" value="{{nickname}}" placeholder="Nickname" required />
+                </label>
+            </div>
+            <div class="control-group right {{#unless full}}hidden{{/unless}}">
+                <label class="control-label" for="username">{{network}} username:
+                    <input type="text" class="form-control" data-validate="username" name="full" id="username" value="{{username}}" placeholder="{{network}} username">
+                </label>
+            </div>
+            <div class="control-group right {{#unless full}}hidden{{/unless}}">
+                <label class="control-label" for="password">Password:
+                    <input type="password" class="form-control" data-validate="password" name="full" id="password" value="{{password}}">
+                </label>
+            </div>
+            <div class="authenticate">
+                <label for="authenticate">Authenticate (optional)<input type="checkbox" id="authenticate" {{check full}}></label for="authenticate">
+            </div>
+            <div><input type="submit" value="Connect" class="btn btn-primary btn-smaller" /></div>
+        <!-- </div> -->
     </form>
     <div class="qwebirc-init-channels"><span>{{channels}}</span></div>
-</div>
+</div>  
