--- a/panes/partials/customNotice.hbs
+++ b/panes/partials/customNotice.hbs
@@ -11,6 +11,9 @@
     <label class="checkbox-inline">{{lang.FLASH}}
         <input type="checkbox" data-id="flash" {{check flash}}>
     </label>
+    <label class="checkbox-inline" >{{lang.PM}}
+        <input type="checkbox" data-id="pm" {{check pm}}>
+    </label>
     <!-- <label class="checkbox-inline">{{lang.HIGHLIGHT}}
         <input type="checkbox" data-id="highlight" {{check highlight}}>
     </label>
