--- a/templates/nickbtn.hbs
+++ b/templates/nickbtn.hbs
@@ -1,1 +1,1 @@
-<div class='user'><span class='nick'>{{nick}}</span></div>{{! wrapped for delegation}}
+<div class='user' data-user="{{nick}}"><span class="prefix">{{prefix}}</span><span class='nick'>{{nick}}</span></div>{{! wrapped for delegation}}
