--- a/templates/ircInput.hbs
+++ b/templates/ircInput.hbs
@@ -2,8 +2,8 @@
     <div class='tt-ahead input-group'>
         <span class='input-group-addon user'><span class='status {{status}}'></span><span class="nickname">{{nick}}</span></span>
         {{!autocompleter}}
-        <input class='tt-hint' type='text' autocomplete='off' spellcheck='off' disabled>
-        <input class='tt-query input-field form-control' type='text' autocomplete='off' spellcheck='off'>
+        <input class='tt-hint hidden' type='text' autocomplete='off' spellcheck='off' disabled>{{!the actual autocomplete layer - gets rendered underneath the tt-query by css}}
+        <input class='tt-query form-control irc-input decorated' type='text' autocomplete='off' spellcheck='off'>
         <span class='input-group-btn'>
             <button class='btn btn-default send' type='button'>&gt;</button>
         </span>
