Theme parsers+options and new settings model
Moved the theme parsers to options model so they can be customized on
the options page
Added a more robust (very confusing!!!) configuration of the
notifications -- seperating standard notices from custom notices
Created a "settings" model which stores login credentials, channels and
stuff similar (see js/src/config/settings) - lets settings be updated a
bit cleaner and hide some logic.

--- a/panes/about.hbs
+++ b/panes/about.hbs
@@ -20,8 +20,20 @@
     <tr>
       <td>
         <li>
-          MooTools v1.2 -- <a href="http://mootools.net/" target="_blank">http://mootools.net/</a><br/>
+          <a href="http://mootools.net/" target="_blank">MooTools v1.4.5</a> and Mootools More 1.4.0.1<br/>
           Copyright &copy; 2006-2008 Valerio Proietti, MIT license.
+        </li>
+        <li><a href="http://handlebarsjs.com/">Handlebars JS</a> by Yehuda Katz for awesome templating</li>
+        <li>
+          <a href="http://epitome-mvc.github.io/Epitome/" target="_blank">Epitome MVC</a> for organizing my code by Dimitar Christoff
+        </li>
+        <li><a href="http://socket.io/" target="_blank">Socket.io</a> by <a href="https://github.com/learnboost" target="_blank">Learn Boost</a></li>
+        <li>
+          <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap v3.0</a><br />
+          Copyright 2013 Twitter, Inc
+        </li>
+        <li>
+          <a href="http://anutron.github.io/mootools-bootstrap/">Mootools bootstrap</a> by Aaron Newton
         </li>
         <li>qwebirc icon -- <a href="http://meeb.org/" target="_blank">http://meeb.org/</a></li>
         <li>
@@ -32,10 +44,10 @@
           Beep sound -- made by Dreamcast on QuakeNet.<br/>
           Released into the public domain.
         </li>
-        <li>
+        <!-- <li>
           MD5 implementation -- <a href="http://pajhome.org.uk/site/legal.html" target="_blank">http://pajhome.org.uk/site/legal.html</a>.<br/>
           Copyright (C) Paul Johnston 1999 - 2000, BSD license.
-        </li>
+        </li> -->
         <li>
           Base64 functions -- <a href="http://www.webtoolkit.info" target="_blank">http://www.webtoolkit.info</a>.<br/>
           No author name present on site.
