--- a/panes/partials/customNotice.hbs
+++ b/panes/partials/customNotice.hbs
@@ -1,27 +1,43 @@
-<div class="controls custom-notice" id={{id}}>
-    <label class="control-inline">{{lang.USER_NOTICE}}
-        <input type="text" data-id="nick" placeholder="{{lang.NICK_PLACEHOLDER}}" value="{{nick}}">
+<div class="controls" data-id="{{id}}">
+    <label class="control-inline">{{lang "USER_NOTICE"}}
+        <input type="text" data-id="nick" placeholder="{{lang "NICK_PLACEHOLDER"}}" value="{{nick}}">
     </label>
-    <label class="control-inline">{{lang.MESSAGE_NOTICE}}
-        <input type="text" data-id="msg" placeholder="{{lang.MESSAGE_PLACEHOLDER}}" value="{{msg}}">
+    <label class="control-inline">{{lang "MESSAGE_NOTICE"}}
+        <input type="text" data-id="msg" placeholder="{{lang "MESSAGE_PLACEHOLDER"}}" value="{{msg}}">
     </label>
-    <label class="checkbox-inline" >{{lang.BEEP}}
+    <label class="control-inline">{{lang "TYPE_NOTICE"}}
+        <input type="text" data-id="type" placeholder="{{lang "TYPE_PLACEHOLDER"}}" value="{{type}}">
+    </label>
+    <label class="checkbox-inline">{{lang "MENTIONED"}}
+        <input type="checkbox" data-id="mentioned" {{check mentioned}}>
+    </label>
+    <label class="checkbox-inline" title="{{lang 'NOTUS_HINT'}}">{{lang "NOTUS"}}
+        <input type="checkbox" data-id="notus" {{check notus}}>
+    </label>
+    <label class="checkbox-inline" >{{lang "BEEP"}}
         <input type="checkbox" data-id="beep" {{check beep}}>
     </label>
-    <label class="checkbox-inline">{{lang.FLASH}}
+    <label class="checkbox-inline">{{lang "FLASH"}}
         <input type="checkbox" data-id="flash" {{check flash}}>
     </label>
-    <label class="checkbox-inline" >{{lang.PM}}
+    <label class="checkbox-inline">{{lang "PM"}}
         <input type="checkbox" data-id="pm" {{check pm}}>
     </label>
-    <!-- <label class="checkbox-inline">{{lang.HIGHLIGHT}}
+    <label class="checkbox-inline" title="{{lang 'HIGHLIGHT_HINT'}}">{{lang "HIGHLIGHT"}}
         <input type="checkbox" data-id="highlight" {{check highlight}}>
     </label>
-    <label class="checkbox-inline">{{lang.MENTIONED}}
+    <!-- <label class="checkbox-inline">{{lang "HIGHLIGHT"}}
+        <input type="checkbox" data-id="highlight" {{check highlight}}>
+    </label>
+    <label class="checkbox-inline">{{lang "MENTIONED"}}
         <input type="checkbox" data-id="mentioned" {{check mentioned}}>
     </label> -->
-    <label class="checkbox-inline" title="{{lang.ESCAPE_HINT}}">{{lang.AUTOESCAPE}}
+    <label class="checkbox-inline">{{lang "IGNORE_CASE"}}
+        <input type="checkbox" data-id="case" {{check case}}>
+    </label>
+    <label class="checkbox-inline" title="{{lang "ESCAPE_HINT"}}">{{lang "AUTOESCAPE"}}
         <input type="checkbox" data-id="autoescape" {{check autoescape}}>
     </label>
-    <input type="button" value="{{lang.DELETE_NOTICE}}" class="remove-notice btn btn-danger btn-smaller">
+    <input type="button" value="{{lang "DELETE_NOTICE"}}" class="remove-notice btn btn-danger btn-smaller">
+    <div class="description">{{description}}</div>
 </div>
