--- a/templates/amd/welcome-pane.hbs
+++ b/templates/amd/welcome-pane.hbs
@@ -1,6 +1,6 @@
 <div class="alert alert-block fade in">
     <button type="button" class="close" data-trigger="nix" data-nix-options="'target': '!div.alert'">×</button>
-    <h4>Welcome to {{options.appTitle}}</h4>
+    <h4>Welcome to {{appTitle}}</h4>
     <div class="controls">
         <p>
         {{#if Browser.Features.notifications}}
