Fixed topic and autoscroll bugs
Autoscrolling now works in detached windows
Topic setting now works

--- a/templates/topicText.hbs
+++ b/templates/topicText.hbs
@@ -1,1 +1,1 @@
-<span class='{{#if empty}}emptytopic{{/if}}' title="{{topic}}">[<span>{{topic}}</span>]</span>
+<span title="{{title}}">[<span>{{{topic}}}</span>]</span>
