--- a/configure/index.tmpl
+++ b/configure/index.tmpl
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1" />
   <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
-  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/bootstrap-min.css" rel="stylesheet">
   <!-- build:remove --> 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet"> <!-- switch to cdn ? -->
   <!-- /build -->
