Seperate css, build step + remove css redundancys

--- a/panes/options.hbs
+++ b/panes/options.hbs
@@ -1,5 +1,5 @@
 {{!TODO: make Coloumns}}
-<form id="options" class="form-horizontal">
+<form class="form-horizontal options">
     <ul class="option-tabs tabs nav nav-tabs" data-behavior="BS.Tabs">
         <li class="ui-options"><a href="#">Interface</a></li>
         <li class="irc-options"><a href="#">Chat Preferences</a></li>
