--- a/templates/amd/popup-dialog.hbs
+++ b/templates/amd/popup-dialog.hbs
@@ -11,7 +11,7 @@
                 {{else}}
                     <div class="controls">
                         <label>{{text}}</label>
-                        <input class="form-control input-block-level" type="text" {{#if placeholder}}placeholder="{{placeholder}}"{{/if}} {{#if value}}{{value}}{{/if}}>
+                        <input class="form-control input-block-level" type="text" {{#if placeholder}}placeholder="{{placeholder}}"{{/if}} {{#if value}}value="{{value}}"{{/if}}>
                     </div>
                 {{/if}}
             </div>
