--- a/templates/authpage.hbs
+++ b/templates/authpage.hbs
@@ -1,5 +1,5 @@
 <div class="container center">
-    <form id="login">
+    <form class="login">
         <h2>Connect to {{network}} IRC</h2>
         <div class="control-group right">
             <label class="control-label" for="nickname">Nickname:
@@ -23,5 +23,5 @@
             <input type="submit" value="Connect" class="btn btn-primary btn-smaller" />
         </div>
     </form>
-    <div class="qwebirc-init-channels"><span>{{channels}}</span></div>
+    <div class="init-channels"><span>{{channels}}</span></div>
 </div>  
