--- a/templates/mainmenu.hbs
+++ b/templates/mainmenu.hbs
@@ -1,5 +1,6 @@
 <ul class="main-menu dropdownmenu hidden">
     <a class="internal" href="options"><li><span>Options</span></li></a>
+    <a class="internal" href="channels"><li><span>Channel List</span></li></a>
     <a class="internal" href="embedded"><li><span>Add webchat to your site</span></li></a>
     <a class="internal" href="privacy"><li><span>Privacy policy</span></li></a>
     <a class="internal" href="faq"><li><span>Frequently asked questions</span></li></a>
